monitoring/ingress_grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/whitelist-source-range:
    cert-manager.io/acme-challenge-type: "http01"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts: 
    - grafana-eks.homologacao.com.br
    secretName: tls-grafana
  rules:
  - host: grafana-eks.homologacao.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
