monitoring/ingress_prometheus.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/whitelist-source-range:
    cert-manager.io/acme-challenge-type: "http01"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts: 
    - prometheus-eks.homologacao.com.br
    secretName: tls-prometheus
  rules:
  - host: prometheus-eks.homologacao.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
